# cogitarelink-solid

./: .gitignore  CLAUDE.local.md  CLAUDE.md  Makefile  codemeta.json  docker-compose.yml  pyproject.toml
.claude/memory/: MEMORY.md
.claude/rules/: decisions-index.md  docker-patterns.md  python-patterns.md  rdf-patterns.md  solid-patterns.md  typescript-patterns.md
.claude/skills/: decision-lookup.md  pod-discover.md  pod-init.md  pod-sparql.md  pod-status.md  pod-validate.md  sbom-update.md  vault-import.md
adapter/: Dockerfile  main.py  requirements.txt
comunica/: config.json  package.json
css/: .dockerignore  Dockerfile
css/config/: dev-allow-all.json  pod-templates-override.json  seed.json  solid-config.json  void-description.json
css/config/shape-validation/: link-rel.json  metadata-writer.json  resource-store.json  shape-validation.json
css/extensions/markdown-rdfa/: .gitignore  README.md  package.json  tsconfig.cjs.json  tsconfig.json
docs/plans/: 2026-02-28-typescript-first-architecture-design.md  2026-02-28-typescript-first-restructure.md  2026-04-01-pod-agentic-memory-structure-design.md  2026-04-01-reproducible-pod-setup-design.md  2026-04-01-reproducible-pod-setup.md  2026-04-01-vertical-slice-implementation.md  2026-04-02-content-pipeline.md
ontology/: solid-pod-profile.ttl  vault-ontology.ttl
scripts/: pod_setup.py  vault_import.py
scripts/lib/: ldp_client.py  rdf_gen.py
shapes/: concept-note.ttl
tests/pytest/: conftest.py  test_ldp_client.py  test_pod_structure.py  test_rdf_gen.py  test_sparql.py  test_vault_import.py
(+35 files in other folders)
